[gd_scene load_steps=2 format=3 uid="uid://dvya1mdh2e75l"]

[ext_resource type="Script" uid="uid://fl5the672xbt" path="res://scripts/SettingsPopup.gd" id="1"]

[node name="SettingsPopup" type="PopupPanel"]
oversampling_override = 1.0
size = Vector2i(600, 620)
visible = true
script = ExtResource("1")

[node name="Panel" type="Panel" parent="."]
offset_left = 4.0
offset_top = 4.0
offset_right = 596.0
offset_bottom = 616.0

[node name="VBox" type="VBoxContainer" parent="Panel"]
layout_mode = 0
offset_left = 20.0
offset_top = 20.0
offset_right = 580.0
offset_bottom = 600.0

[node name="TitleLabel" type="Label" parent="Panel/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 36
text = "⚙️ Настройки"
horizontal_alignment = 1

[node name="HSeparator1" type="HSeparator" parent="Panel/VBox"]
layout_mode = 2

[node name="ModeLabel" type="Label" parent="Panel/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Лимиты:"

[node name="ModeContainer" type="HBoxContainer" parent="Panel/VBox"]
layout_mode = 2

[node name="JunketButton" type="Button" parent="Panel/VBox/ModeContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 28
text = "Junket"

[node name="ClassicButton" type="Button" parent="Panel/VBox/ModeContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 28
text = "Classic"

[node name="ModeInfoLabel" type="Label" parent="Panel/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Основные ставки: 2000-200000, шаг 500
Tie: 100-900, шаг 25
Пары: 100-900, шаг 25
Комиссия банкира: 95%"
autowrap_mode = 3

[node name="HSeparator2" type="HSeparator" parent="Panel/VBox"]
layout_mode = 2

[node name="LangLabel" type="Label" parent="Panel/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Язык:"

[node name="LangContainer" type="HBoxContainer" parent="Panel/VBox"]
layout_mode = 2

[node name="RuButton" type="Button" parent="Panel/VBox/LangContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 28
text = "Русский"

[node name="EnButton" type="Button" parent="Panel/VBox/LangContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 28
text = "English"

[node name="HSeparator3" type="HSeparator" parent="Panel/VBox"]
layout_mode = 2

[node name="SurvivalContainer" type="HBoxContainer" parent="Panel/VBox"]
layout_mode = 2

[node name="SurvivalLabel" type="Label" parent="Panel/VBox/SurvivalContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Режим «Выживание»"

[node name="SurvivalCheckbox" type="CheckButton" parent="Panel/VBox/SurvivalContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 24

[node name="HSeparator4" type="HSeparator" parent="Panel/VBox"]
layout_mode = 2

[node name="BetProfile" type="HBoxContainer" parent="Panel/VBox"]
layout_mode = 2
size_flags_vertical = 4

[node name="Label" type="Label" parent="Panel/VBox/BetProfile"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Ставки:"

[node name="BetProfileButton" type="OptionButton" parent="Panel/VBox/BetProfile"]
layout_mode = 2
tooltip_text = "Средние"

[node name="HSeparator5" type="HSeparator" parent="Panel/VBox"]
layout_mode = 2

[node name="CloseButton" type="Button" parent="Panel/VBox"]
layout_mode = 2
size_flags_vertical = 8
theme_override_font_sizes/font_size = 28
text = "OK"
