# res://scripts/SettingsPopup.gd
extends PopupPanel

signal mode_changed(mode: String)  # "junket" Ğ¸Ğ»Ğ¸ "classic"
signal language_changed(lang: String)
signal survival_mode_changed(enabled: bool)  # Ğ²ĞºĞ»/Ğ²Ñ‹ĞºĞ» Ñ€ĞµĞ¶Ğ¸Ğ¼ Ğ²Ñ‹Ğ¶Ğ¸Ğ²Ğ°Ğ½Ğ¸Ñ

enum GameMode { JUNKET, CLASSIC }

var current_mode: GameMode = GameMode.JUNKET
var survival_mode_enabled: bool = false  # Ğ ĞµĞ¶Ğ¸Ğ¼ Ğ²Ñ‹Ğ¶Ğ¸Ğ²Ğ°Ğ½Ğ¸Ñ Ğ²Ñ‹ĞºĞ»ÑÑ‡ĞµĞ½ Ğ¿Ğ¾ ÑƒĞ¼Ğ¾Ğ»Ñ‡Ğ°Ğ½Ğ¸Ñ

# UI ÑĞ»ĞµĞ¼ĞµĞ½Ñ‚Ñ‹
@onready var junket_button: Button
@onready var classic_button: Button
@onready var mode_info_label: Label
@onready var ru_button: Button
@onready var en_button: Button
@onready var survival_checkbox: CheckButton
@onready var close_button: Button
@onready var bet_profile_button: OptionButton  # ĞŸĞµÑ€ĞµĞºĞ»ÑÑ‡Ğ°Ñ‚ĞµĞ»ÑŒ Ğ¿Ñ€Ğ¾Ñ„Ğ¸Ğ»Ñ ÑÑ‚Ğ°Ğ²Ğ¾Ğº

func _ready():
	# Ğ¡ĞºÑ€Ñ‹Ğ²Ğ°ĞµĞ¼ Ğ¿Ğ¾Ğ¿Ğ°Ğ¿ Ğ¿Ñ€Ğ¸ Ğ·Ğ°Ğ¿ÑƒÑĞºĞµ
	hide()

	# â† Ğ£ÑÑ‚Ğ°Ğ½Ğ°Ğ²Ğ»Ğ¸Ğ²Ğ°ĞµĞ¼ Ğ½ĞµĞ¿Ñ€Ğ¾Ğ·Ñ€Ğ°Ñ‡Ğ½Ñ‹Ğ¹ Ñ„Ğ¾Ğ½
	var stylebox = StyleBoxFlat.new()
	stylebox.bg_color = Color(0.2, 0.2, 0.25, 1.0)  # Ğ¢Ñ‘Ğ¼Ğ½Ğ¾-ÑĞµÑ€Ñ‹Ğ¹, Ğ½ĞµĞ¿Ñ€Ğ¾Ğ·Ñ€Ğ°Ñ‡Ğ½Ñ‹Ğ¹
	stylebox.border_width_left = 4
	stylebox.border_width_top = 4
	stylebox.border_width_right = 4
	stylebox.border_width_bottom = 4
	stylebox.border_color = Color(0.6, 0.5, 0.3)  # Ğ—Ğ¾Ğ»Ğ¾Ñ‚Ğ¸ÑÑ‚Ğ°Ñ Ñ€Ğ°Ğ¼ĞºĞ°
	stylebox.corner_radius_top_left = 8
	stylebox.corner_radius_top_right = 8
	stylebox.corner_radius_bottom_left = 8
	stylebox.corner_radius_bottom_right = 8
	add_theme_stylebox_override("panel", stylebox)

	# ĞŸĞ¾Ğ»ÑƒÑ‡Ğ°ĞµĞ¼ ÑÑÑ‹Ğ»ĞºĞ¸ Ğ½Ğ° ÑĞ»ĞµĞ¼ĞµĞ½Ñ‚Ñ‹ (Ñ Ğ¿Ñ€Ğ¾Ğ²ĞµÑ€ĞºĞ¾Ğ¹ Ğ½Ğ°Ğ»Ğ¸Ñ‡Ğ¸Ñ)
	if has_node("Panel/VBox/ModeContainer/JunketButton"):
		junket_button = get_node("Panel/VBox/ModeContainer/JunketButton")
		junket_button.pressed.connect(_on_junket_pressed)

	if has_node("Panel/VBox/ModeContainer/ClassicButton"):
		classic_button = get_node("Panel/VBox/ModeContainer/ClassicButton")
		classic_button.pressed.connect(_on_classic_pressed)

	if has_node("Panel/VBox/ModeInfoLabel"):
		mode_info_label = get_node("Panel/VBox/ModeInfoLabel")

	if has_node("Panel/VBox/LangContainer/RuButton"):
		ru_button = get_node("Panel/VBox/LangContainer/RuButton")
		ru_button.pressed.connect(_on_ru_pressed)

	if has_node("Panel/VBox/LangContainer/EnButton"):
		en_button = get_node("Panel/VBox/LangContainer/EnButton")
		en_button.pressed.connect(_on_en_pressed)

	if has_node("Panel/VBox/SurvivalContainer/SurvivalCheckbox"):
		survival_checkbox = get_node("Panel/VBox/SurvivalContainer/SurvivalCheckbox")
		survival_checkbox.toggled.connect(_on_survival_toggled)

	if has_node("Panel/VBox/CloseButton"):
		close_button = get_node("Panel/VBox/CloseButton")
		close_button.pressed.connect(_on_close_pressed)

	# Ğ˜Ğ½Ğ¸Ñ†Ğ¸Ğ°Ğ»Ğ¸Ğ·Ğ°Ñ†Ğ¸Ñ BetProfileButton (OptionButton)
	if has_node("Panel/VBox/BetProfile/BetProfileButton"):
		bet_profile_button = get_node("Panel/VBox/BetProfile/BetProfileButton")
		_setup_bet_profile_button()

	# ĞĞ±Ğ½Ğ¾Ğ²Ğ»ÑĞµĞ¼ UI
	_update_mode_buttons()
	_update_mode_info()
	_update_lang_buttons()
	_update_survival_checkbox()
	_update_bet_profile_button()

func _on_junket_pressed():
	current_mode = GameMode.JUNKET
	_update_mode_buttons()
	_update_mode_info()
	mode_changed.emit("junket")

func _on_classic_pressed():
	current_mode = GameMode.CLASSIC
	_update_mode_buttons()
	_update_mode_info()
	mode_changed.emit("classic")

func _on_ru_pressed():
	Localization.set_lang("ru")
	_update_lang_buttons()
	language_changed.emit("ru")

func _on_en_pressed():
	Localization.set_lang("en")
	_update_lang_buttons()
	language_changed.emit("en")

func _on_survival_toggled(pressed: bool):
	survival_mode_enabled = pressed
	survival_mode_changed.emit(pressed)

func _on_close_pressed():
	hide()

func _update_mode_buttons():
	# Ğ’Ñ‹Ğ´ĞµĞ»ÑĞµĞ¼ Ğ°ĞºÑ‚Ğ¸Ğ²Ğ½ÑƒÑ ĞºĞ½Ğ¾Ğ¿ĞºÑƒ Ñ€ĞµĞ¶Ğ¸Ğ¼Ğ°
	if not junket_button or not classic_button:
		return

	if current_mode == GameMode.JUNKET:
		junket_button.disabled = true
		classic_button.disabled = false
	else:
		junket_button.disabled = false
		classic_button.disabled = true

func _update_lang_buttons():
	# Ğ’Ñ‹Ğ´ĞµĞ»ÑĞµĞ¼ Ğ°ĞºÑ‚Ğ¸Ğ²Ğ½ÑƒÑ ĞºĞ½Ğ¾Ğ¿ĞºÑƒ ÑĞ·Ñ‹ĞºĞ°
	if not ru_button or not en_button:
		return

	var current_lang = Localization.get_lang()
	ru_button.disabled = (current_lang == "ru")
	en_button.disabled = (current_lang == "en")

func _update_mode_info():
	if not mode_info_label:
		return

	if current_mode == GameMode.JUNKET:
		mode_info_label.text = """ĞÑĞ½Ğ¾Ğ²Ğ½Ñ‹Ğµ ÑÑ‚Ğ°Ğ²ĞºĞ¸: 2000-200000, ÑˆĞ°Ğ³ 500
Tie: 100-900, ÑˆĞ°Ğ³ 25
ĞŸĞ°Ñ€Ñ‹: 100-900, ÑˆĞ°Ğ³ 25
ĞšĞ¾Ğ¼Ğ¸ÑÑĞ¸Ñ Ğ±Ğ°Ğ½ĞºĞ¸Ñ€Ğ°: 95%"""
	else:  # CLASSIC
		mode_info_label.text = """ĞÑĞ½Ğ¾Ğ²Ğ½Ñ‹Ğµ ÑÑ‚Ğ°Ğ²ĞºĞ¸: 50-3000, ÑˆĞ°Ğ³ 1
Tie: 25-300, ÑˆĞ°Ğ³ 1
ĞŸĞ°Ñ€Ñ‹: 25-200, ÑˆĞ°Ğ³ 1
ĞšĞ¾Ğ¼Ğ¸ÑÑĞ¸Ñ Ğ±Ğ°Ğ½ĞºĞ¸Ñ€Ğ°: 50%"""

func _update_survival_checkbox():
	if survival_checkbox:
		survival_checkbox.button_pressed = survival_mode_enabled

func get_current_mode() -> String:
	return "junket" if current_mode == GameMode.JUNKET else "classic"

func set_game_mode(game_mode: String):
	if game_mode == "junket":
		current_mode = GameMode.JUNKET
	else:
		current_mode = GameMode.CLASSIC
	_update_mode_buttons()

func set_survival_mode(enabled: bool):
	survival_mode_enabled = enabled
	_update_survival_checkbox()

# â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•
# ĞŸĞ ĞĞ¤Ğ˜Ğ›Ğ˜ Ğ¡Ğ¢ĞĞ’ĞĞš
# â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•

func _setup_bet_profile_button():
	if not bet_profile_button:
		return

	# ĞÑ‡Ğ¸Ñ‰Ğ°ĞµĞ¼ ÑÑƒÑ‰ĞµÑÑ‚Ğ²ÑƒÑÑ‰Ğ¸Ğµ Ğ¾Ğ¿Ñ†Ğ¸Ğ¸
	bet_profile_button.clear()

	# Ğ”Ğ¾Ğ±Ğ°Ğ²Ğ»ÑĞµĞ¼ Ğ²ÑĞµ 3 Ğ¿Ñ€Ğ¾Ñ„Ğ¸Ğ»Ñ
	bet_profile_button.add_item(Localization.t("BET_PROFILE_SMALL"), 0)   # SMALL
	bet_profile_button.add_item(Localization.t("BET_PROFILE_MEDIUM"), 1)  # MEDIUM
	bet_profile_button.add_item(Localization.t("BET_PROFILE_LARGE"), 2)   # LARGE

	# Ğ£ÑÑ‚Ğ°Ğ½Ğ°Ğ²Ğ»Ğ¸Ğ²Ğ°ĞµĞ¼ Ñ‚ĞµĞºÑƒÑ‰Ğ¸Ğ¹ Ğ¿Ñ€Ğ¾Ñ„Ğ¸Ğ»ÑŒ
	bet_profile_button.selected = BetProfileManager.get_profile()

	# ĞŸĞ¾Ğ´ĞºĞ»ÑÑ‡Ğ°ĞµĞ¼ ÑĞ¸Ğ³Ğ½Ğ°Ğ»
	bet_profile_button.item_selected.connect(_on_bet_profile_selected)

func _on_bet_profile_selected(index: int):
	# index = 0 (SMALL), 1 (MEDIUM), 2 (LARGE)
	BetProfileManager.set_profile(index as BetProfileManager.BetProfile)
	print("ğŸ’° ĞŸÑ€Ğ¾Ñ„Ğ¸Ğ»ÑŒ ÑÑ‚Ğ°Ğ²Ğ¾Ğº Ğ¸Ğ·Ğ¼ĞµĞ½Ñ‘Ğ½: %s" % BetProfileManager.get_profile_name())

func _update_bet_profile_button():
	if not bet_profile_button:
		return

	# ĞĞ±Ğ½Ğ¾Ğ²Ğ»ÑĞµĞ¼ Ğ²Ñ‹Ğ±Ñ€Ğ°Ğ½Ğ½Ñ‹Ğ¹ ÑĞ»ĞµĞ¼ĞµĞ½Ñ‚ (Ğ½Ğ° ÑĞ»ÑƒÑ‡Ğ°Ğ¹ Ğ¸Ğ·Ğ¼ĞµĞ½ĞµĞ½Ğ¸Ñ Ğ¸Ğ· Ğ´Ñ€ÑƒĞ³Ğ¾Ğ³Ğ¾ Ğ¼ĞµÑÑ‚Ğ°)
	bet_profile_button.selected = BetProfileManager.get_profile()
